Refatoracao pt 1